# show-n-tell

./: .gitignore  CLAUDE.md  LICENSE  README.md  SKILL.md  pyproject.toml
.claude-plugin/: plugin.json
_assets/bg_music/: README.md  calm_ambient_piano.json  cinematic_build.json  library.json  playful_uke_strum.json  tech_modern_pulse.json  upbeat_morning.json  warm_acoustic_loop.json
docs/: ARCHITECTURE.md  CONTEXT.md  DESIGN-DECISIONS.md  GOTCHAS.md  PHASE-A-TASKS.md  PHASE-B-TASKS.md  PLAN.md  REFERENCE.md  SCHEMAS.md  SKILL-MD-OUTLINE.md
docs/superpowers/plans/: 2026-05-12-crossfade-seams.md  2026-05-12-explore-page-auth.md  2026-05-12-storage-state-oauth.md  2026-05-13-bg-music.md
examples/halyard-spme/: branding.yaml  demo_config.yaml  storyboard.yaml
examples/login-flow/: .env.example  README.md  branding.yaml  demo_config.yaml  storyboard.yaml
examples/oauth-storage-state/: .gitignore  README.md  branding.yaml  demo_config.yaml  storyboard.yaml
helpers/: capture_auth.py  explore_page.py  pdf_wrapper.py
recipes/: inline_pdf.html.j2  login_form_fill.yaml
scripts/: _lib.py  brand_video.py  finalize_video.py  make_captions.py  make_intro_outro.py  make_overlay.py  mux_demo.py  record_demo.py  render_voiceover.py  speed_video.py
skills/show-n-tell/: _assets
templates/: branding.example.yaml  demo_config.example.yaml  storyboard.example.yaml
tests/: test_bg_music.py  test_explore_page.py  test_explore_page_e2e.py  test_finalize_bg_music_e2e.py  test_record_storage_state_e2e.py  test_storage_state.py
tools/: make-plugin.sh
(+4 files in other folders)
